<resources>
    <string name="app_name">Goldacbj</string>
    <string name="matchThis">Match this:</string>
    <plurals name="score">
        <item quantity="one">Score: %d</item>
        <item quantity="other">Score: %d</item>
    </plurals>
    <string name="shuffle">Shuffle</string>
    <string name="reset">Reset</string>
    <string name="matched">Matched</string>
    <string name="clicked">Clicked</string>
    <string name="congratulations">Congratulations</string>
    <string name="toLearn">To learn?</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="yourScore">Your score was: </string>
    <string name="definition">Definition</string>
    <string name="action_settings">Settings</string>
    <string name="score_start">Score: 0</string>
    <string name="hint">Hint</string>
    <string name="englishName">English Name: </string>
    <string name="spanishName">Spanish Name: </string>
    <string name="germanName">German Name: </string>
    <string name="definitionName">Definition: </string>
</resources>
